# AIthinking

./: AIthinking.py  README.md  pyproject.toml
